wip: almost done resetting the world
