# project/backend/routes/user.js
@@ -8,41 +8,24 @@ router.route('/').get((req, res) => {
         .catch(err => res.status(400).json('Error: ' + err));
 });
 
-router.route('/signup').post(async (req, res) => {
-    try {
-        const salt = await bcrypt.genSalt();
-        const hashedPassword = await bcrypt.hash(req.body.password, salt);
-        user_detail = {
-            "firstName": req.body.firstName,
-            "lastName": req.body.lastName,
-            "email": req.body.email,
-            "password": hashedPassword
-        }
 
-        const newUser = new User(user_detail);
+module.exports = createUser;
 
-        newUser.save()
-            .then(() => res.json('User added!'))
-            .catch(err => res.status(400).json('Error: ' + err));
+async function createUser(username,  email, password){
+    const salt = await bcrypt.genSalt();
+    const hashedPassword = await bcrypt.hash(password, salt);
+    user_detail = {
+        "username": username,
+        "salt": salt,
+        "email": email,
+        "password": hashedPassword
     }
-    catch {
-        res.status(500).send();
-    }
-});
+    return new User(user_detail)
+}
 
 router.route('/create').post(async (req, res) => {
     try {
-        const salt = await bcrypt.genSalt();
-        const hashedPassword = await bcrypt.hash(req.body.password, salt);
-        user_details = {
-            'username': req.body.username,
-            'email': req.body.email,
-            'password': hashedPassword,
-            'salt': salt
-        }
-
-        const newUser = new User(user_details);
-        newUser.save()
+        (await createUser(req.body.username, req.body.email, req.body.password)).save()
             .then(() => res.json('User added!'))
             .catch(err => res.status(400).json('Error: ' + err));
     }
