# sem2/backend/routes/user.js
@@ -2,54 +2,33 @@ const router = require('express').Router();
 let User = require('../models/user.model');
 const bcrypt = require('bcrypt');
 
-router.route('/').get((req, res) => {
-    User.find()
-        .then(users => res.json(users))
-        .catch(err => res.status(400).json('Error: ' + err));
-});
+// router.route('/').get((req, res) => {
+//     User.find()
+//         .then(users => res.json(users))
+//         .catch(err => res.status(400).json('Error: ' + err));
+// });
 
-module.exports = createUser;
+module.exports = {createUser, router};
 
-async function createUser(firstName, lastName, email, password){
+async function createUser(username, email, password) {
     const salt = await bcrypt.genSalt();
     const hashedPassword = await bcrypt.hash(password, salt);
     user_detail = {
-        "firstName": firstName,
-        "lastName": lastName,
+        "username": username,
         "email": email,
-        "password": hashedPassword
+        "password": hashedPassword,
+        "salt": salt
     }
-    return new User(user_detail)
+    console.log(user_detail);
+    return new User(user_detail);
 }
 
 
-router.route('/signup').post(async (req, res) => {
-    try {
-        let body = req.body
-        const newUser = createUser(body.firstName, body.lastName, body.email, body.password);
-
-        newUser.save()
-            .then(() => res.json('User added!'))
-            .catch(err => res.status(400).json('Error: ' + err));
-    }
-    catch {
-        res.status(500).send();
-    }
-});
-
 router.route('/create').post(async (req, res) => {
     try {
-        const salt = await bcrypt.genSalt();
-        const hashedPassword = await bcrypt.hash(req.body.password, salt);
-        user_details = {
-            'username': req.body.username,
-            'email': req.body.email,
-            'password': hashedPassword,
-            'salt': salt
-        }
 
-        const newUser = new User(user_details);
-        newUser.save()
+
+        (await createUser(req.body.username, req.body.email, req.body.password)).save()
             .then(() => res.json('User added!'))
             .catch(err => res.status(400).json('Error: ' + err));
     }
@@ -97,4 +76,3 @@ router.post('/logout', (req, res) => {
     });
   });
 
-    module.exports = router;
